--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 	</head>
 	<body>
 		<div class="box">
+			<img src="silly_aekur.webp" width="75%" alt="silly moth">
+			<p>(by <a href="https://twitter.com/Tropineapple1" target="_blank">@Tropineapple1</a>)</p>
 			<h1>hello</h1>
 			<p>welcome to aekurmou's page!</p>
 		</div>
 		<div class="box">
 			<h1>info</h1>
+			<p>male; he/they</p>
 			<p>my name is <b>aekurmou</b>, whose sona is a blue moth.</p>
 			<p>i am a certified moth enjoyer; i love moths.</p>
 			<p>i do programming (mainly C#). i do math.</p>
@@ -38,7 +41,9 @@
 			</div>
 			<div class="socials-container">
 				<b>discord</b>
-				<p>handle: aekurmou</p>
+				<a class="btn" href="https://discord.com/users/579794412414959616" target="_blank">
+					aekurmou
+				</a>
 				<a class="btn" href="https://discord.gg/Y5fftaPbru" target="_blank">
 					server invite
 				</a>
