--- a/dekrypty.html
+++ b/dekrypty.html
@@ -6,6 +6,8 @@
 		<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 		<style>
 			:root {
+				color: white;
+				background-color: black;
 				font-family: monospace;
 				font-size: 12pt;
 			}
@@ -17,15 +19,17 @@
 				display: inline-block;
 				max-width: 400px;
 				word-wrap: break-word;
-				border: 2px solid black;
+				border: 2px solid white;
 			}
 			div.puzbox a {
 				text-decoration: none;
 			}
 			div.puzbox a:hover {
-				color: #9eb5d8;
-				background-color: black;
+				background-color: #9eb5d8;
 				text-decoration: underline;
+			}
+			div.puzbox a:visited {
+				color: white;
 			}
 		</style>
 	</head>
