--- a/dekrypty.html
+++ b/dekrypty.html
@@ -33,20 +33,23 @@
 			}
 		</style>
 	</head>
+	<body>
+		<h1>Dekrypty</h1>
+		<p>it is absolutely necessary that you must be a legal adult prior to attempting this puzzle.</p>
+		<h2>.......??????..</h2>
+		<div class="puzbox">
+			$$\text{chemical element #}F^F$$
+			$$F=\frac{df}{dx}(4)$$
+			$$f(x)=-\frac{3}{4}x^{2}+9x-24$$
+		</div>
+		<h2>.............??</h2>
+		<div class="puzbox">
+			62 65 72 79 6<a href="#" onclick="alert('hex -> ascii -> chem index')">C</a> 6C 69 75 6D
+		</div>
+		<h2><a href="https://en.wikipedia.org/wiki/Moth#Etymology">???????........</a></h2>
+		<div class="puzbox">
+			..............x.....................................................x...................................................x....x..................................................................................................................................x............................<a href="#" onclick="alert('masking')">x</a>...................................x...................................................................
+		</div>
+	</body
 </html>
 
-<h1>Dekrypty</h1>
-<h2>.......??????..</h2>
-<div class="puzbox">
-	$$\text{chemical element #}F^F$$
-	$$F=\frac{df}{dx}(4)$$
-	$$f(x)=-\frac{3}{4}x^{2}+9x-24$$
-</div>
-<h2>.............??</h2>
-<div class="puzbox">
-	62 65 72 79 6<a href="#" onclick="alert('hex -> ascii -> chem index')">C</a> 6C 69 75 6D
-</div>
-<h2><a href="https://en.wikipedia.org/wiki/Moth#Etymology">???????........</a></h2>
-<div class="puzbox">
-	..............x.....................................................x...................................................x....x..................................................................................................................................x............................<a href="#" onclick="alert('masking')">x</a>...................................x...................................................................
-</div>
