--- a/index.html
+++ b/index.html
@@ -1,59 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Aekurmou's Page</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>aekur.xyz</title>
 		<link href="common.css" rel="stylesheet">
 		<link href="font_import.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="box">
-			<img src="silly_aekur.webp" width="75%" alt="silly moth">
-			<p>(by <a href="https://twitter.com/Tropineapple1" target="_blank">@Tropineapple1</a>)</p>
-			<h1>hello</h1>
-			<p>welcome to aekurmou's page!</p>
-		</div>
-		<div class="box">
-			<h1>info</h1>
-			<p>male; he/they</p>
-			<p>my name is <b>aekurmou</b>, whose sona is a blue moth.</p>
-			<p>i am a certified moth enjoyer; i love moths.</p>
-			<p>i do programming (mainly C#). i do math.</p>
-		</div>
-		<div class="box">
-			<h1>socials</h1>
-			<div class="socials-container">
-				<b>twitter</b>
-				<a class="btn" href="https://twitter.com/aekurmou" target="_blank">
-					aekurmou
-				</a>
-				<a class="btn" href="https://twitter.com/aekurslamp" target="_blank">
-					aekurslamp
-				</a>
-				<a class="btn" href="https://twitter.com/sillymoth3309" target="_blank">
-					sillymoth3309
-				</a>
+		<header>
+			<div class="logo">
+				<img src="silly_aekur.webp" height="90px">
+				<span><span style="color: var(--c1)">ækur</span>.xyz</span>
 			</div>
-			<div class="socials-container">
-				<b>youtube</b>
-				<a class="btn" href="https://www.youtube.com/channel/UC9pTq7yagueH7k8mPVJv-Sw" target="_blank">
-					aekurmou
-				</a>
-			</div>
-			<div class="socials-container">
-				<b>discord</b>
-				<a class="btn" href="https://discord.com/users/579794412414959616" target="_blank">
-					aekurmou
-				</a>
-				<a class="btn" href="https://discord.gg/Y5fftaPbru" target="_blank">
-					server invite
-				</a>
-			</div>
-			<div class="socials-container">
-				<b>github</b>
-				<a class="btn" href="https://github.com/aekurmou" target="_blank">
-					aekurmou
-				</a>
-			</div>
-		</div>
+		</header>		
+		<nav>
+			<a href="index.html">index</a>
+			<a href="art.html">produced art</a>
+			<a href="fanart.html">received fanart</a>
+		</nav>
+		<main>
+			<p>(demi)male; bisexual; he/they</p>
+			<p>luna-polyphemus moth hybrid</p>
+			<p>programmer (C#), game developer, somewhat knowledgeable in math</p>
+			<p>
+				(twitter)
+				<a href="https://twitter.com/aekurmou" target="_blank">aekurmou</a>, 
+				<a href="https://twitter.com/aekurslamp" target="_blank">aekurslamp</a>
+			</p>
+			<p>
+				(youtube)
+				<a href="https://www.youtube.com/channel/UC9pTq7yagueH7k8mPVJv-Sw" target="_blank">aekurmou</a>
+			</p>
+			<p>
+				(github)
+				<a href="https://github.com/aekurmou" target="_blank">aekurmou</a>
+			</p>
+			<p>
+				you may also send me messages/art anonymously through my 
+				<a href="https://aekur.straw.page" target="_blank">straw.page</a>.
+			</p>
+		</main>
 	</body>
 </html>
