--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 				<a href="https://twitter.com/aekurslamp" target="_blank">aekurslamp</a>
 			</p>
 			<p>
+				(bluesky)
+				<a href="https://bsky.app/profile/aekurmou.bsky.social" target="_blank">aekurmou.bsky.social</a>, 
+			</p>
+			<p>
 				(youtube)
 				<a href="https://www.youtube.com/channel/UC9pTq7yagueH7k8mPVJv-Sw" target="_blank">aekurmou</a>
 			</p>
