--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 			<p>luna-polyphemus moth hybrid</p>
 			<p>programmer (C#), game developer, somewhat knowledgeable in math</p>
 			<p>
-				(twitter)
-				<a href="https://twitter.com/aekurmou" target="_blank">aekurmou</a>, 
-				<a href="https://twitter.com/aekurslamp" target="_blank">aekurslamp</a>
+				(bluesky)
+				<a href="https://bsky.app/profile/aekur.xyz" target="_blank">aekur.xyz</a>, 
 			</p>
 			<p>
-				(bluesky)
-				<a href="https://bsky.app/profile/aekurmou.bsky.social" target="_blank">aekurmou.bsky.social</a>, 
+				(twitter) (this site is fucked btw)
+				<a href="https://twitter.com/aekurmou" target="_blank">aekurmou</a>, 
+				<a href="https://twitter.com/aekurslamp" target="_blank">aekurslamp</a>
 			</p>
 			<p>
 				(youtube)
