--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 			<p>(demi)male; bisexual; he/they</p>
 			<p>luna-polyphemus moth hybrid</p>
 			<p>programmer (C#), game developer, somewhat knowledgeable in math</p>
+			<p>an absolute moth enjoyer</p>
 			<p>
 				(bluesky)
-				<a href="https://bsky.app/profile/aekur.xyz" target="_blank">aekur.xyz</a>, 
+				<a href="https://bsky.app/profile/aekur.xyz" target="_blank">aekur.xyz</a>
 			</p>
 			<p>
 				(twitter) (this site is fucked btw)
-				<a href="https://twitter.com/aekurmou" target="_blank">aekurmou</a>, 
-				<a href="https://twitter.com/aekurslamp" target="_blank">aekurslamp</a>
+				<a href="https://twitter.com/aekurmou" target="_blank">aekurmou</a>
 			</p>
 			<p>
 				(youtube)
