--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 				<a href="https://bsky.app/profile/aekur.xyz" target="_blank">aekur.xyz</a>
 			</p>
 			<p>
-				(twitter) (this site is fucked btw)
-				<a href="https://twitter.com/aekurmou" target="_blank">aekurmou</a>
-			</p>
-			<p>
 				(youtube)
 				<a href="https://www.youtube.com/channel/UC9pTq7yagueH7k8mPVJv-Sw" target="_blank">aekurmou</a>
 			</p>
 			<p>
 				(github)
 				<a href="https://github.com/aekurmou" target="_blank">aekurmou</a>
+			</p>
+			<p>
+				(itch.io)
+				<a href="https://aekurmou.itch.io" target="_blank">aekurmou</a>
 			</p>
 			<p>
 				you may also send me messages/art anonymously through my 
