--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<a href="fanart.html">received fanart</a>
 		</nav>
 		<main>
-			<p>(demi)male; bisexual; he/they</p>
+			<p>genderfluid; bisexual; he/any</p>
 			<p>luna-polyphemus moth hybrid</p>
 			<p>programmer (C#), game developer, somewhat knowledgeable in math</p>
 			<p>an absolute moth enjoyer</p>
