--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
 				you may also send me messages/art anonymously through my 
 				<a href="https://aekur.straw.page" target="_blank">straw.page</a>.
 			</p>
+			<p>
+				<b style="color: #eeffff">
+					if you enjoy my works and/or are willing to support me financially, refer to my 
+					<a href="https://ko-fi.com/aekurmou" target="_blank">ko-fi page</a>.
+				</b>
+			</p>
 		</main>
 	</body>
 </html>
