--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 		</header>		
 		<nav>
 			<a href="index.html">index</a>
-			<a href="art.html">produced art</a>
-			<a href="fanart.html">received fanart</a>
+			<a href="preciseage.html">precise age</a>
 		</nav>
 		<main>
 			<p>genderfluid; bisexual; he/any</p>
