--- a/index.html
+++ b/index.html
@@ -13,19 +13,25 @@
 				<img src="silly_aekur.webp" height="90px">
 				<span><span style="color: var(--c1)">ækur</span>.xyz</span>
 			</div>
-		</header>		
+		</header>
 		<nav>
 			<a href="index.html">index</a>
 			<a href="preciseage.html">precise age</a>
+			<a href="convert/hub.html">convert town</a>
+			<a href="artcomm.html">art commission</a>
 		</nav>
 		<main>
 			<p>genderfluid; bisexual; he/any</p>
 			<p>luna-polyphemus moth hybrid</p>
-			<p>programmer (C#), game developer, somewhat knowledgeable in math</p>
+			<p>artist, programmer (C#), game developer, somewhat knowledgeable in math</p>
 			<p>an absolute moth enjoyer</p>
 			<p>
 				(bluesky)
 				<a href="https://bsky.app/profile/aekur.xyz" target="_blank">aekur.xyz</a>
+			</p>
+			<p>
+				(twitter)
+				<a href="https://twitter.com/aekurmou" target="_blank">aekurmou</a>
 			</p>
 			<p>
 				(youtube)
@@ -38,10 +44,6 @@
 			<p>
 				(itch.io)
 				<a href="https://aekurmou.itch.io" target="_blank">aekurmou</a>
-			</p>
-			<p>
-				you may also send me messages/art anonymously through my 
-				<a href="https://aekur.straw.page" target="_blank">straw.page</a>.
 			</p>
 			<p>
 				<b style="color: #eeffff">
