--- a/preciseage.html
+++ b/preciseage.html
@@ -13,10 +13,12 @@
 				<img src="silly_aekur.webp" height="90px">
 				<span><span style="color: var(--c1)">ækur</span>.xyz</span>
 			</div>
-		</header>		
+		</header>
 		<nav>
 			<a href="index.html">index</a>
 			<a href="preciseage.html">precise age</a>
+			<a href="convert/hub.html">convert town</a>
+			<a href="artcomm.html">art commission</a>
 		</nav>
 		<main>
 			<p>aekur is actually</p>
