--- a/artcomm.html
+++ b/artcomm.html
@@ -21,7 +21,9 @@
 			<a href="artcomm.html">art commission</a>
 		</nav>
 		<main>
-			<h1>Art Commission</h1>
+			<h1>Art Commission</h1>			
+			<img src="artcommasset/commshee_visual.png" width="500px">
+			<br>
 			<table class="prices">
 				<caption>Prices</caption>
 				<tbody>
@@ -68,7 +70,7 @@
 			<ul class="positive">
 				<li>Anthro bugs</li>
 				<li>Simple firearms</li>
-				<li>Light gore<sup>12</sup></li>
+				<li>Light gore<sup>[1][2]</sup></li>
 			</ul>
 			<ul class="negative">
 				<li>Feral</li>
@@ -77,15 +79,14 @@
 				<li>Hate art</li>
 				<li>Heavy gore</li>
 				<li>Fetish</li>
-				<li>Canine snout<sup>3</sup></li>
+				<li>Canine snout<sup>[3]</sup></li>
 			</ul><br>
-			<ul style="font-size: 10pt">
+			<ul style="font-size: 8pt">
 				<li><sup>1</sup>I have not done this but am willing to draw the feature.</li>
 				<li><sup>2</sup>This may cause the work to be considered sensitive/suggestive.</li>
-				<li><sup>3</sup>Although not problematic, I struggle to draw the feature.</li>
+				<li><sup>3</sup>Although more common, I struggle to draw the feature.</li>
 			</ul>
-			
-			<img src="artcommasset/commshee_visual.png" width="500px">
+			<p>If you have any questions, feel free to ask!</p>
 			
 			<h1>Terms of Service</h1>
 			<p>I reserve the right to deny or cancel any commission if I deem it to be beyond my capabilities or inappropriate. The client will be refunded just in case.</p>
