--- a/convert/hub.html
+++ b/convert/hub.html
@@ -18,7 +18,7 @@
 			<a href="../index.html">index</a>
 			<a href="../preciseage.html">precise age</a>
 			<a href="hub.html">convert town</a>
-			<a href="../artcomm.html">art commission</a>
+			<a href="../artcomm/index.html">art comm β</a>
 		</nav>
 		<main>
 			<h1>welcome to aekur's convert town!</h1>
