--- a/preciseage.html
+++ b/preciseage.html
@@ -18,7 +18,7 @@
 			<a href="index.html">index</a>
 			<a href="preciseage.html">precise age</a>
 			<a href="convert/hub.html">convert town</a>
-			<a href="artcomm/index.html">art comm β</a>
+			<a href="artcomm/index.html">art comm</a>
 		</nav>
 		<main>
 			<p>aekur is actually</p>
