--- a/artcomm/index.html
+++ b/artcomm/index.html
@@ -23,9 +23,9 @@
 			</div>
 		</header>
 		<nav>
-			<a href="../index.html">index</a>
+			<a href="../index.html">home</a>
 			<a href="../preciseage.html">precise age</a>
-			<a href="../convert/hub.html">convert town</a>
+			<a href="../toolworld/index.html">toolworld</a>
 			<a href="index.html">art comm</a>
 		</nav>
 		<main>
@@ -160,9 +160,9 @@
 				<li><sup>[2]</sup>This may cause the work to be considered sensitive/suggestive.</li>
 				<li><sup>[3]</sup>See <a href="#Circumstances">Circumstances</a></li>
 				<li class="mature"><sup>[4]</sup>Only for adult (18+) clients.</li>
-				<li class="mature"><sup>[5]</sup>Exceptions include hyper.</li>
+				<li class="mature"><sup>[5]</sup>Exceptions include hyper genitalia and (safe) vore.</li>
 			</ul>
-			<p>Est. turnaround time: <b>2 days ~ 3 weeks</b>. You will be notified if the slot will take longer than expected.</p>
+			<p>Est. turnaround time: <b>2 days ~ 3 weeks</b>. Ko-Fi supporters receive queue priority. You will be notified if the slot will take longer than expected.</p>
 			<p>If you have any questions, feel free to ask!</p>
 			
 			<h1 id="ToS">Terms of Service</h1>
