--- a/preciseage.html
+++ b/preciseage.html
@@ -15,9 +15,9 @@
 			</div>
 		</header>
 		<nav>
-			<a href="index.html">index</a>
+			<a href="index.html">home</a>
 			<a href="preciseage.html">precise age</a>
-			<a href="convert/hub.html">convert town</a>
+			<a href="toolworld/index.html">toolworld</a>
 			<a href="artcomm/index.html">art comm</a>
 		</nav>
 		<main>
