--- a/index.html
+++ b/index.html
@@ -15,23 +15,20 @@
 			</div>
 		</header>
 		<nav>
-			<a href="index.html">index</a>
+			<a href="index.html">home</a>
 			<a href="preciseage.html">precise age</a>
-			<a href="convert/hub.html">convert town</a>
+			<a href="toolworld/index.html">toolworld</a>
 			<a href="artcomm/index.html">art comm</a>
 		</nav>
 		<main>
-			<p>genderfluid; bisexual; he/any</p>
-			<p>luna-polyphemus moth hybrid</p>
-			<p>artist, programmer (C#), game developer, somewhat knowledgeable in math</p>
-			<p>an absolute moth enjoyer</p>
+			<p>COME FORTH TO THE ABSOLUTELY BEAUTIFUL AND TOTALLY WELL-THOUGHT WEB DESIGN YOUR EYES WILL EVER LAY UPON</p>
 			<p>
 				(bluesky)
 				<a href="https://bsky.app/profile/aekur.xyz" target="_blank">aekur.xyz</a>
 			</p>
 			<p>
 				(twitter)
-				<a href="https://twitter.com/aekurmou" target="_blank">aekurmou</a>
+				<s>aekurmou</s>
 			</p>
 			<p>
 				(youtube)
