--- a/toolworld/numberdecompose.html
+++ b/toolworld/numberdecompose.html
@@ -23,7 +23,7 @@
 				<br>
 				<br>
 				<div id="largeNumWarnDiv" style="display: none">
-					<strong>this number is considered too large to automatically calculate within a reasonable amount of time. if you do try to calculate anyway, keep in mind that your client might freeze for longer the massive a potential prime factor is! </strong>
+					<strong>this number is considered too large to automatically calculate within a reasonable amount of time. if you do try to calculate anyway, keep in mind that your client might hang, and however long depends on how massive a potential prime factor is! </strong>
 					<a href="javascript:void(0)" onclick="doCalculation()">click here to calculate anyway</a>
 				</div>
 				<div id="primeDiv">
